--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,13 +10,13 @@
   --accent-background-light: #d4d4d4;
   --accent-text: #eeecf9
 }
-
+/* 
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #1c1c17;
     --foreground: #f4f0f0;
   }
-}
+} */
 
 body {
   color: var(--foreground);
